--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ main {
     /* Usa toda a largura disponível */
     max-width: 800px;
     /* Limite em telas grandes */
-    min-width: 500px;
+    min-width: 200px;
     min-height: 100vh;
     /* Altura mínima = altura da tela */
     margin: 0 auto 0px;
     /* Centraliza horizontalmente */
-    padding: 20px;
+    padding: 15px;
     box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.539);
 }
 
@@ -44,9 +44,10 @@ main {
     color: white;
     font-family: "Work Sans", sans-serif;
     font-style: normal;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
-    margin: 0px;
+    margin:auto;
+    padding:15px;
 }
 
 .ptudo {
@@ -61,6 +62,7 @@ main {
     text-align: center;
     font-size: 3em;
     padding: 2cm;
+    margin-right:0px;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.393);
 }
 
@@ -158,12 +160,12 @@ ol {
     /* Usa toda a largura disponível */
     max-width: 800px;
     /* Limite em telas grandes */
-    min-width: 500px;
+    min-width: 300px;
     min-height: 20vh;
     /* Altura mínima = altura da tela */
     margin: 0 auto 50px;
     /* Centraliza horizontalmente */
-    padding: 20px;
+    padding: 15px;
     display: flex;
     justify-content: center;
     /* centraliza horizontal */
@@ -177,12 +179,12 @@ ol {
     /* Usa toda a largura disponível */
     max-width: 800px;
     /* Limite em telas grandes */
-    min-width: 500px;
+    min-width: 300px;
     min-height: 20vh;
     /* Altura mínima = altura da tela */
     margin: 0 auto 50px;
     /* Centraliza horizontalmente */
-    padding: 20px;
+    padding: 15px;
     box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.539);
     margin-top: -49px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -206,8 +208,8 @@ ol {
     color: #000000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 16px;
+    padding-right: 15px;
     padding-top: 15px;
 }
 
@@ -220,7 +222,7 @@ ol {
     margin-left: 1px;
     margin-right: -1px;
     max-width: 1000px;
-    min-width: 510px;
+    min-width: 300px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -251,9 +253,9 @@ footer {
     color: white;
     width: 90%;
     /* Usa toda a largura disponível */
-    max-width: 840px;
+    max-width: 830px;
     /* Limite em telas grandes */
-    min-width: 622px;
+    min-width: 427px;
     min-height: 0vh;
     /* Altura mínima = altura da tela */
     margin: 0 auto 50px;
