--- a/style.css
+++ b/style.css
@@ -253,16 +253,17 @@ footer {
     color: white;
     width: 90%;
     /* Usa toda a largura disponível */
-    max-width: 830px;
+    max-width: 800px;
     /* Limite em telas grandes */
-    min-width: 427px;
-    min-height: 0vh;
+    min-width: 300px;
+    min-height: 2vh;
     /* Altura mínima = altura da tela */
     margin: 0 auto 50px;
     /* Centraliza horizontalmente */
     margin-top: -50px;
     padding-top: 5px;
     padding-bottom: 5px;
+    padding:15px;
     box-shadow: 01px 2px 10px rgba(0, 0, 0, 0.407);
     text-align: center;
 }
