--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 
 body {
     background-color: rgba(32, 246, 160, 0.862);
+    margin:auto;
 }
 
 main {
@@ -64,6 +65,7 @@ main {
     font-size: 3em;
     padding: 2cm;
     margin-right:0px;
+    margin:0 auto;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.393);
 }
 
