--- a/style.css
+++ b/style.css
@@ -56,16 +56,20 @@ main {
     margin-top: -65px;
     text-align: center;
     margin: auto;
+    max-width: 1000px;
+    min-width: 200px;
 }
 
 .curiosidade {
     font-family: "Roboto Mono", monospace;
     font-style: oblique;
     text-align: center;
+    max-width: 1000px;
+    min-width: 200px;
     font-size: 3em;
     padding: 2cm;
     margin-right:0px;
-    margin:0 auto;
+    margin:0px auto;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.393);
 }
 
