--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ main {
     font-style: oblique;
     font-size: 3em;
     margin:auto;
+padding: 25px;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.393);
 }
 
